# PMD2-HWiNFO

./: Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  main.rs  registry.rs  serial.rs
