[package]
name = "pmd2_hwinfo"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
strip = true
debug = false
rpath = false
incremental = false

[dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Devices_Communication",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console"
]}
